cabal-version:      3.0
name:               asciimath
version:            1.0.0
synopsis:           AsciiMath parser and data types.

-- description:
homepage:           https://github.com/kozross/asciimath
license:            GPL-3.0-or-later
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/asciimath/issues
copyright:          (C) Koz Ross 2021
category:           Text
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.3
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

common common-lang
  build-depends:    base >=4.12 && <5
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  if flag(dev)
    ghc-options: -Werror

  default-language: Haskell2010

library
  import:          common-lang
  exposed-modules: Text.Ascii.Math
  build-depends:
    , megaparsec  ^>=9.0.0
    , scientific  ^>=0.3.6.2
    , text-ascii  ^>=1.0.0

  hs-source-dirs:  src

flag dev
  description: Always use this during development!
  manual:      True
  default:     False
